fixed horizontal overflow of flowers issue

--- a/scripts/project_pages/spongebob_style.css
+++ b/scripts/project_pages/spongebob_style.css
@@ -152,6 +152,7 @@ body {
     width: 100%;
     height: 100vh;
     text-align: center;
+    overflow-x: hidden;
 }
 
 .flower {
